Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dreamcometrue
  labels:
    name: dreamcometrue
