Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: dreamcometrue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: app
        image: 096919867785.dkr.ecr.us-east-1.amazonaws.com/dreamcometrue-repo:50ed4c5d02135d92c3316ac20f10ea518ff14747
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
