Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dreamcometrue
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
