Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dreamcometrue
  annotations:
    kubernetes.io/ingressClassName: "alb" 
spec:
  rules:
  - host: dreamcometrue.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
